Parse settings from Azure Devops Extension (#1246)